# unitree_mujoco

./: .gitignore  readme.md  readme_zh.md
adapters/: constants.py
adapters/abstracts/: adapter.py  sensor_adapter.py  sport_adapter.py
adapters/sensor/: internal_camera.py
adapters/sensor/idl/: ImageData_.idl
adapters/sensor/idl/msg/: _ImageData_.py
adapters/sport/: stand_down.py  stand_up.py
bridge/adapters/: adapter.py
bridge/adapters/sport/: stand_down.py
bridge/publishers/: internal_camera.py  sim_camera_subscriber.py
bridge/publishers/iceoryx/: constants.py
bridge/publishers/iceoryx/msg/: DepthFrame_.py  RGBFrame_.py
bridge/publishers/idl/: ImageData_.idl
bridge/publishers/idl/msg/: _ImageData_.py
example/python/: stand_go2.py
iceoryx_interfaces/: CMakeLists.txt  notes.txt  pyproject.toml
iceoryx_interfaces/cmake/: iceoryx_interfacesConfig.cmake.in
iceoryx_interfaces/src/cpp/include/: constants.hpp
iceoryx_interfaces/src/cpp/include/camera_data/: DepthFrameData_.hpp  RGBFrameData_.hpp  constants.hpp
iceoryx_interfaces/src/cpp/include/qos/: camera_qos.hpp
iceoryx_interfaces/src/python/iceoryx_interfaces/camera_data/: DepthFrameData_.py  RGBFrameData_.py  __init__.py
iceoryx_interfaces/src/python/iceoryx_interfaces/lidar_data/: LidarData_.py  LidarHeader_.py  __init__.py
iceoryx_interfaces/src/python/iceoryx_interfaces/mappings/: __init__.py  sport_mappings.py
iceoryx_interfaces/src/python/iceoryx_interfaces/qos/: __init__.py  camera_qos.py  lidar_qos.py  sport_qos.py
iceoryx_interfaces/src/python/iceoryx_interfaces/sport_cmds/: FloatArgsData_.py  MoveCommandData_.py  NoArgsData_.py  RotateCommandData_.py  SportCommandHeader_.py  __init.py  __init__.py
simulate/: CMakeLists.txt  MUJOCO_LOG.TXT  notes.txt  pyproject.toml
simulate/config/: main.yaml
simulate/config/sensors/: camera.yaml
simulate/cpp/: main.cc
simulate/cpp/sensors/iceoryx/: constants.hpp
simulate/cpp/utils/: aligned_allocator.hpp  simd.cpp  simd.hpp
simulate/resources/config/: global.yaml
simulate/resources/go2/: go2.xml
simulate/resources/scene/: scene.xml
simulate/src/: main.cc
simulate/src/config/: main.yaml
simulate/src/config/sensors/: camera.yaml
simulate/src/cpp/: main.cc  param.h
simulate/src/cpp/sensors/common/: camera_publisher.cpp  camera_publisher.hpp
simulate/src/cpp/utils/: simd.cpp  simd.hpp
simulate/src/dds/: camera_publisher.cpp  camera_publisher.h  camera_publisher.hpp
simulate/src/idl/: ImageData.cpp  ImageData.hpp  ImageData_.cpp  ImageData_.hpp
simulate/src/python/: bridge.py  constants.py
simulate/src/python/adapters/sport/: __init__.py  move.py  rotate.py  stand_down.py  stand_up.py  stop.py
simulate/src/python/go2sim/: __init__.py  cli.py  main.py
simulate/src/python/go2sim/adapters/: adapter.py
simulate/src/python/go2sim/adapters/sport/: constants.py  move.py  rotate.py  stand_down.py  stand_up.py  stop.py
simulate/src/python/go2sim/bridge/: __init__.py  command_manager.py  sport_bridge.py
simulate/src/python/go2sim/terrain_builder/: generator.py  helpers.py  terrain_generator.py
simulate/src/python/publishers/iceoryx/: constants.py
simulate/src/python/publishers/iceoryx/msg/: RGBFrame_.py
simulate/src/sensors/common/: camera_publisher.cpp  camera_publisher.hpp
simulate/src/sensors/iceoryx/: DepthFrame_.hpp  RGBFrame_.hpp  constants.hpp
simulate/src/sensors/iceoryx/msg/: DepthFrame_.hpp  RGBFrame_.hpp
simulate/src/sensors/idl/: ImageData_.cpp  ImageData_.hpp
simulate/src/utils/: simd.cpp  simd.hpp
unitree_robots/go2/: go2.xml
