[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "iceoryx_interfaces"
version = "0.1.0"
description = "Shared Iceoryx2 data definitions"
requires-python = ">=3.10"
dependencies = [
    "iceoryx2==0.8.1"
]

[tool.scikit-build]
wheel.install-dir = "src/python" 
sdist.include = ["iceoryx_interfaces*"]