[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "iceoryx_interfaces"
version = "0.1.0"
authors = [
    { name="7Swaize" }
]
description = "Python Iceoryx2 data definitions"
requires-python = ">=3.10"
dependencies = [
    "iceoryx2==0.8.1"
]


[tool.setuptools.packages.find]
where = ["src/python"]
include = ["iceoryx_interfaces*"]