[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "iceoryx_interfaces"
version = "0.1.0"
description = "Python Iceoryx2 data definitions"
authors = [
    { name="7Swaize" }
]
requires-python = ">=3.10"
dependencies = [
    "iceoryx2==0.8.1"
]


[tool.setuptools.packages.find]
where = ["src/python"]
include = ["iceoryx_interfaces*"]